Use `URI.create(...).toURL()` removing URL constructor deprecation
(cherry picked from commit 4ee668299389e4f020edf6d23edb510c9d6f09b1)