@@ -97,7 +97,7 @@ public class PublicKeyLoader {
 
   private Stream<BLSPublicKey> readKeysFromUrl(final String url) {
     try {
-      final String[] keys = objectMapper.readValue(new URL(url), String[].class);
+      final String[] keys = objectMapper.readValue(URI.create(url).toURL(), String[].class);
       return Arrays.stream(keys).map(key -> BLSPublicKey.fromSSZBytes(Bytes.fromHexString(key)));
     } catch (IOException ex) {
       throw new InvalidConfigurationException("Failed to load public keys from URL " + url, ex);
